# insecure-socket-layer

./: Cargo.toml  README.md
insecure-socket-layer/: Cargo.toml
insecure-socket-layer/src/: cipher.rs  error.rs  fragment.rs  lib.rs  msg.rs  server.rs  types.rs
insecure-socket-layer/src/msg/: codec.rs  handshake.rs
insecure-socket-layer/src/server/: config.rs  stream.rs
test-server/: Cargo.toml
test-server/src/: main.rs  server.der  server.key
