[package]
name = "insecure-socket-layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
hmac = "0.12.1"
md-5 = "0.10.5"
rand = "0.8.5"
rc4 = "0.1.0"
rsa = "0.8.2"
sha1 = "0.10.5"
thiserror = "1.0.40"
tracing = "0.1.37"
